# blog

./: .gitignore  bug.yml  conf.py  env.yml  general-ipynb-to-html-converter.md  ipynb.tmpl  justfile  lock.yml  package-lock.json  package.json  pyproject.toml  shortcodes  tmp.html  todo
.github/workflows/: build.yml
files/: .ignore
galleries/: index.txt
galleries/river-maps/: index.txt  metadata.yml
nbconvert_dev/: custom_preprocessors.py  my_exporter.ipynb  nbconvert_dev.yml
pages/: about-me.md
plugins/ipynb_sc/: ipynb_sc.plugin  ipynb_sc.py
plugins/ipynb_sc_last/: ipynb_sc_last.plugin  ipynb_sc_last.py
posts/: 2020-09-02-introduction-grayscale-images.ipynb.later  introduction-to-grayscale-images.ipynb  jupyter2blog_nbformat.ipynb  my-markdown-post.md  nbconvert.ipynb  optimizing-out-of-memory-calculations-with-dask.md  short.md  testing-ipynb-visual.ipynb  testing-ipynb.ipynb  using-jupyter-notebooks-for-blogs-with-code-motivation.ipynb
shortcodes/: Important.tmpl  alert.tmpl
themes/tailwind/: ipynb.tmpl  justfile  package-lock.json  package.json  tailwind.theme
themes/tailwind/shortcodes/: Footnote.tmpl  NBViewer.tmpl  Note.tmpl  Tip.tmpl  Warning.tmpl  Youtube.tmpl
themes/tailwind/src/: tailwind.config.js  tailwind.src.css
themes/tailwind/tailwind/: tailwind.config.js  tailwind.src.css
themes/tailwind/templates/: alert.tmpl  author.tmpl  base.tmpl  base_footer.tmpl  base_header.tmpl  base_helper.tmpl  feeds_translations_helper.tmpl  gallery.tmpl  index.tmpl  post.tmpl  post_header.tmpl  post_helper.tmpl  tag.tmpl  tags.tmpl
(+2 files in other folders)
