[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My personal blog"
authors = ["Kai Norman Clasen <kai.ce.tub@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
nbconvert = "^6.2.0"
Nikola = {extras = ["extras"], version = "^8.1.3"}
Cartopy = "^0.20.1"
geopandas = "^0.10.2"
# geoviews is not compatible with shapely=1.8
numpy = "^1.21.4"
fnc = "^0.5.3"
scipy = "^1.7.2"
altair = "^4.1.0"
vega-datasets = "^0.9.0"
holoviews = "^1.14.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
